2009-02-21  Alberto Garcia  <agarcia@igalia.com>

	* src/metadata.c (lastfm_get_track_cover_image): Use
	g_static_mutex_get_mutex() instead of creating a separate GMutex.

2009-02-21  Alberto Garcia  <agarcia@igalia.com>

	* src/playlist.c (lastfm_track_ref, lastfm_track_unref)
	* src/audio.c (get_audio_thread, bus_call, lastfm_audio_init)
	* src/scrobbler.c (rsp_session_unref, rsp_session_ref)
	(rsp_session_new):
	Replace GMutex by faster g_atomic_* operations.

2009-02-11  Alberto Garcia  <agarcia@igalia.com>

	* src/uimisc.c: Update copyright on about dialog.

2009-02-11  Alberto Garcia  <agarcia@igalia.com>

	* debian/changelog
	* debian/copyright
	* README
	* scripts/vagalumectl
	* Makefile.am
	* src/Makefile.am
	* src/*.[ch]:
	Set Igalia as copyright holder.

2009-02-10  Alberto Garcia  <agarcia@igalia.com>

	* configure.ac
	* debian/changelog
	* debian/control:
	Compile with GstMixer support (non-Maemo only).

	* src/audio.c (audio_mixer_init, lastfm_audio_init)
	(lastfm_audio_clear, lastfm_audio_get_volume)
	(lastfm_audio_set_volume):
	Use GstMixer if available to change the volume in non-Maemo
	targets.

	* src/vgl-main-window.c (key_press_cb, vgl_main_window_init):
	Keybindings to change the volume in non-Maemo targets.

	* src/audio.h
	* src/audio.c (lastfm_audio_default_mixer_name)
	* src/main.c (main)
	* vagalume.1:
	Command-line option (-m) to select the GstMixer plugin to use.

2009-01-31  Alberto Garcia  <agarcia@igalia.com>

	* configure.ac
	* src/uimisc.c (ui_create_combo_box_entry): Check for Gtk >= 2.12
	to use gtk_entry_completion_set_inline_selection()

2009-01-31  Alberto Garcia  <agarcia@igalia.com>

	* po/POTFILES.in
	* src/protocol.c (lastfm_parse_track): Check for NULL in the
	playlist (radio) title.

2009-01-26  Alberto Garcia  <agarcia@igalia.com>

	* src/scrobbler.c (rsp_session_new, rsp_session_get_or_renew)
	(rsp_scrobbler_thread_scrobble, set_nowplaying_thread)
	(usercfg_changed_cb, +rsp_session_ref, +rsp_session_unref): Use